[project]
name = "ndl-mcp"
version = "1.0.0"
description = "MCP server for National Diet Library (NDL) API - 国立国会図書館APIへのMCPアクセス"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ndl-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
